tests/js_error/source_locations/destructure/array/hole_iterator_next.exp
Error: 
  at next (tests/js_error/source_locations/destructure/array/hole_iterator_next.js:8:17)
  at <global> (tests/js_error/source_locations/destructure/array/hole_iterator_next.js:19:9)
